<resources>
    <string name="app_name">DermCare</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="profile_name">Profile Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="address">Sumbersari Gang 4 No. 261 Lowokwaru, Malang</string>
    <string name="age_user">27</string>
    <string name="language">Language</string>
    <string name="history_transaction">History Transaction</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="about">About DermCare</string>
    <string name="logout">Logout</string>
    <string name="rejected">Rejected</string>
    <string name="product">Product</string>
    <string name="history">History</string>
    <string name="title_diseases">Type Of Diseases</string>
    <string name="description_disease">Description Disease</string>
    <string name="title_detail">Detail</string>
    <string name="email_error">Must be in a valid email format</string>
    <string name="desc_detail">This is description detail</string>
    <string name="about_dermcare">DermCare is an  application can provide detection of skin diseases according to the image inputted by the user. /nThen will provide an accurate diagnosis and drug recommendations related to the disease experienced</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="title_login">Welcome !</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="have_account">Don’t have an account?</string>
    <string name="password_error">Must not be less than 8 characters</string>
    <string name="drug_detail">Drug Detail</string>
    <string name="buy">Buy</string>
    <string name="preview">Preview</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_message">"Are you sure you want to leave?"</string>
    <string name="result">Result</string>
    <string name="your_photo_results">Your Photo Results</string>
    <string name="your_skin_diagnosed">Your Skin Diagnosed</string>
    <string name="drug_recommendations">Drug Recommendations</string>
    <string name="drug_title">Drug Title</string>
    <string name="empty_image">Please insert an image first</string>
    <string name="result_score">Result Score</string>
    <string name="hello">Hello !</string>
    <string name="username">Username</string>
    <string name="designed_by">Designed By</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_photo_profile">Edit Photo Profile</string>
    <string name="save">Save</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="detail_and_payment">Detail and Payment</string>
    <string name="paid">Paid</string>
    <string name="recommendation">Recommendation</string>
    <string name="see">See more</string>
    <string name="medicine">Medicine</string>
    <string name="your_skin_description">Your Skin Description</string>
    <string name="result_name">Result Name</string>
    <string name="result_description">Result Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="setting_msg_title">"Language Setting"</string>
    <string name="setting_msg_body">"To change the language, please change the language in your device settings"</string>
    <string name="setting">"Open Settings"</string>
    <string name="setting_cancel">"Cancel"</string>
    <string name="title_status">Hore!!\nYour Transaction is Complete!</string>
    <string name="see_transaction_history">See Transaction History</string>
    <string name="back_to_home">Back to Home</string>

</resources>