<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.diseases.detail.DetailDiseaseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/lytAppbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/background"
            android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_detail"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivDrug"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:src="@drawable/sample_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytAppbar"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTitleDrug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_detail"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black_2"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDrug" />

    <TextView
        android:id="@+id/tvDescDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_detail"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black_2"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDrug"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="@color/blue"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/buy"
        android:visibility="visible"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>