<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.diseases.detail.DetailDiseaseActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/lytAppbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="@color/background"
                android:minHeight="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_button"/>

                <TextView
                    android:id="@+id/txTitlePredict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvImageResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_photo_results"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytAppbar" />

        <ImageView
            android:id="@+id/ivImageResult"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:src="@drawable/sample_photo"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImageResult"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvSkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_skin_diagnosed"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImageResult" />

        <TextView
            android:id="@+id/tvNameResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_detail"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black_2"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSkin"
            />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_score"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameResult" />

        <TextView
            android:id="@+id/tvScoreResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_score"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black_2"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScore"
            />

        <View
            android:id="@+id/vDash"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dash_line"
            android:alpha="0.1"
            android:layerType="software"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreResult" />

        <TextView
            android:id="@+id/tvDrugRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_recommendations"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vDash" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDrugRecommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDrugRecommend">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitleDrug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:paddingBottom="16dp"
                    android:text="@string/drug_title"
                    android:textColor="@color/black_2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDrugImg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleDrug">

                    <ImageView
                        android:id="@+id/ivDrugRecommend"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sample_photo"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvDescDrug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxEms="10"
                    android:maxLines="2"
                    android:paddingTop="16dp"
                    android:text="@string/description_disease"
                    android:textColor="@color/black_2"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvDrugImg" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>