<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivDermLogin"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/image_login" />

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_login"
            android:textColor="@color/black1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDermLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/email_icon"
            app:endIconTint="@color/black1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin">

            <com.dermcare.android.utils.widget.CustomEmailEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:endIconTint="@color/black1"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_email">

            <com.dermcare.android.utils.widget.CustomPasswordEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/lyt_password"
            app:layout_constraintTop_toBottomOf="@+id/lyt_password" />


        <FrameLayout
            android:id="@+id/lyt_frame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login"
                android:visibility="visible"
                tools:visibility="visible"
                app:cornerRadius="12dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:padding="16dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/or"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/lyt_frame"
            app:layout_constraintStart_toStartOf="@+id/lyt_frame"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frame" />

        <LinearLayout
            android:id="@+id/lyt_linear"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" >

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/gmail_icon" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                app:srcCompat="@drawable/facebook_icon"
                />

            <ImageView
                android:id="@+id/ivTwitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/twitter_icon"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_linear" >

            <TextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:alpha="0.5"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black3" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>