<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.main.bottom_nav.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/hello"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tvHello"
            app:layout_constraintStart_toEndOf="@+id/tvHello"
            app:layout_constraintTop_toTopOf="@+id/tvHello"
            app:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/profile_icon"
            app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
            app:layout_constraintEnd_toEndOf="@+id/ivBanner"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvUsername"
            app:layout_constraintTop_toTopOf="@+id/tvUsername"
            app:layout_constraintVertical_bias="0.803" />

        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/banner"
            android:paddingHorizontal="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

        <TextView
            android:id="@+id/tvTitleHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivBanner"
            app:layout_constraintTop_toBottomOf="@+id/ivBanner" />

        <FrameLayout
            android:id="@+id/flHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleHistory">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_history" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity = "center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvDrugRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/medicine"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/flHistory"
            app:layout_constraintTop_toBottomOf="@+id/flHistory" />

        <FrameLayout
            android:id="@+id/flRecommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDrugRecommend">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_drug"
                />

            <ProgressBar
                android:id="@+id/progressBarRecomend"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity = "center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>